--- a/product-review-card/styles.css
+++ b/product-review-card/styles.css
@@ -106,7 +106,8 @@ h1{
 @media only screen and (max-width : 767px){
     .product-container {
         flex-direction : column;
-        background-color :red;
+       
+       
     }
     .product-image {
         max-width : 100%;
@@ -116,7 +117,7 @@ h1{
 @media only screen and (max-width : 500px){
     .product-container {
         flex-direction : column;
-        background-color :red;
+        /* background-color :red; */
     }
     .product-image {
         max-width : 100%;
@@ -127,7 +128,7 @@ h1{
 @media only screen and (max-width : 375px){
     .product-container {
         flex-direction : column;
-        background-color :red;
+        /* background-color :red; */
     }
     .product-image {
         max-width : 100%;
